<resources>
    <string name="app_name">SUBGA Mobile</string>

    <string name="hello_world">Hello world!</string>
    <string name="logout">Logout</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>

    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="spinner">spinner</string>

    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="add_on_yq">Add On YQ</string>
    <string name="cargo">Cargo</string>
    <string name="codeshare_and_spa">Codeshare and SPA</string>
    <string name="domestic">Domestic</string>
    <string name="fligh_schedule">Flight Scedhule and Operation</string>
    <string name="internal_news">Interal News</string>
    <string name="international">International</string>
    <string name="midle_east">Middle East</string>
    <string name="other">Other</string>
    <string name="pin_hin">PIN, HIN, and RIN</string>
    <string name="rsp_yearly">RSP Yearly Domestic and International</string>
    <string name="rules_and_procedure">Rules and Procedure DOM and International</string>

    <string name="nav_new">New Document</string>
    <string name="nav_bookmark">Bookmark</string>
    <string name="nav_download">Download</string>
    <string name="setting">Setting</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="help_center">Help Center</string>
    <string name="about">About</string>

    <string name="ssatu">Slide</string>
    <string name="sdua">Slide 2</string>
    <string name="stiga">Slide 3</string>
    <string name="sempat">Slide 4</string>
    <string name="slima">Slide 5</string>
    <string name="senam">Slide 6</string>

    <string name="by">By</string>
    <string name="subject">Subject</string>
    <string name="ga_info">GA Info</string>
    <string name="refer">Refer</string>

    <string name="forgot_password"><a href="http://subga.info/homepage/lupa_password">Forgot your password</a></string>
    <string name="register_here"><a href="http://subga.info/homepage/create_member">Register here</a></string>
</resources>
