<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d1d2d4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_centerHorizontal="true"
        android:background="#d4cbcb"
        android:id="@+id/relativeLayout7"
        android:layout_alignParentTop="true">

        <ViewFlipper

            android:layout_width="@dimen/_350sdp"
            android:layout_height="@dimen/_350sdp"
            android:layout_centerHorizontal="true"
            android:inAnimation="@anim/slide_in_right"
            android:outAnimation="@anim/slide_out_left"
            android:id="@+id/viewFlipper1">

            <ImageView
                android:layout_width="410dp"
                android:layout_height="@dimen/_160sdp"
                android:id="@+id/image1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/ssatu"
                android:background="@mipmap/ssatu" />

            <ImageView
                android:layout_width="365dp"
                android:layout_height="@dimen/_160sdp"
                android:id="@+id/image2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/sdua"
                android:background="@mipmap/sdua" />

            <ImageView
                android:layout_width="365dp"
                android:layout_height="@dimen/_160sdp"
                android:id="@+id/image3"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/stiga"
                android:background="@mipmap/stiga" />

            <ImageView
                android:layout_width="365dp"
                android:layout_height="@dimen/_160sdp"
                android:id="@+id/image4"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/sempat"
                android:background="@mipmap/sempat" />

            <ImageView
                android:layout_width="365dp"
                android:layout_height="@dimen/_160sdp"
                android:id="@+id/image5"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/slima"
                android:background="@mipmap/slima" />

            <ImageView
                android:layout_width="365dp"
                android:layout_height="@dimen/_160sdp"
                android:id="@+id/image6"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/senam"
                android:background="@mipmap/senam" />

        </ViewFlipper>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/_350sdp"
        android:layout_height="@dimen/_140sdp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:background="#1f5aa6"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/relativeLayout7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Navigasi"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/relativeLayout4"
            android:layout_alignStart="@+id/relativeLayout4"
            android:layout_marginTop="@dimen/_6sdp"
            android:textColor="#d1d2d4"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:id="@+id/relativeLayout4"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_above="@+id/relativeLayout6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_new"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@mipmap/button_new_document"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/relativeLayout6"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/relativeLayout4"
            android:layout_alignStart="@+id/relativeLayout4"
            android:layout_marginBottom="30dp">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_bookmark"
                android:background="@mipmap/button_bookmark" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/relativeLayout3"
            android:layout_alignTop="@+id/relativeLayout4"
            android:layout_toRightOf="@+id/relativeLayout4"
            android:layout_toEndOf="@+id/relativeLayout4"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginLeft="@dimen/_20sdp">

            <ImageButton
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/btn_download"
                android:adjustViewBounds="true"
                android:background="@mipmap/button_download"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/relativeLayout5"
            android:layout_alignTop="@+id/relativeLayout6"
            android:layout_alignLeft="@+id/relativeLayout3"
            android:layout_alignStart="@+id/relativeLayout3">

            <ImageButton
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/btn_setting"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@mipmap/button_setting" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/_350sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="#d1d2d4"
        android:layout_below="@+id/relativeLayout2">

        <ImageView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="match_parent"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@mipmap/home_bawah" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout2"
        android:background="#2d9bd8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_100sdp"
            android:text="Hot News"
            android:id="@+id/textView47"
            android:background="#2d9bd8"
            android:autoText="false"
            android:gravity="center|clip_vertical"
            android:textColor="#d1d2d4"
            android:textSize="14dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/_18sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="@dimen/_235sdp"
            android:layout_height="match_parent"
            android:background="#d1d2d4"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"></RelativeLayout>
    </RelativeLayout>

</RelativeLayout>